test/testdata/number/not_callable_error.lox
1(); // error: 'number' object is not callable
